Fikset på index og la til ref til css-en

--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
-<<<<<<< HEAD
+<!--<<<<<< HEAD
 My version - Julian
-=======
+My edited - Yanis
+=======-->
+
 <!DOCTYPE html>
 <html>
-<head>
-</head>
 
-<body>
-</body>
+    <head>
+        <meta name="description" content="Website created to accompany Syrian literacy app">
+        <meta name="keywords" content="Syria, accessibility, literacy">
+        <meta name="viewport" content="width=device-width">
+        <link rel="stylesheet" type="text/css" href="index.css"/>
+    </head>
+
+    <body>
+    </body>
 
 </html>
->>>>>>> origin/master
+
+<!-->>>>>>> origin/master-->
