Fikset på index syntaks og la til css ref

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!--<<<<<< HEAD
 My version - Julian
 My edited - Yanis
-=======-->
+origin/master
+>>>>>>>-->
 
 <!DOCTYPE html>
 <html>
@@ -17,5 +18,3 @@ My edited - Yanis
     </body>
 
 </html>
-
-<!-->>>>>>> origin/master-->
