Added intitial structure with divtags in html document
Should be able to make something simular to the layout of our draft
based on this, will probably needs to add some more later.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,22 @@ origin/master
     </head>
 
     <body>
+        <div id="Nav1">
+            <!-- Colorized Menu buttons left side -->
+            <div id="Button1"></div>
+            <div id="Button2"></div>
+            <div id="Button3"></div>
+            <div id="Button4"></div>
+            <div id="Button5"></div>
+            <div id="Button6"></div>
+            <div id="Button7"></div>
+        </div>
+        <!-- Button for changing language of site -->
+        <div id="Language"></div>
+        <!-- Content of website in center of screen-->
+        <div id="Content"></div>
+        <!-- Footerbar in bottom of screen -->
+        <div id="Footer"></div>
     </body>
 
 </html>
