Lagt til kommentar på index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ origin/master
     <body>
         <div id="Nav1">
             <!-- Colorized Menu buttons left side -->
-            <div id="Button1"></div>
+            <div id="Button1"></div>            
             <div id="Button2"></div>
             <div id="Button3"></div>
             <div id="Button4"></div>
@@ -31,6 +31,9 @@ origin/master
         <div id="Content"></div>
         <!-- Footerbar in bottom of screen -->
         <div id="Footer"></div>
+
+<!-- Idè: Hva om #Language, #Content og #Footer flyttes inn i en Div ID som bare inneholder dem?-->
+
     </body>
 
 </html>
