Added div tag contentwrapper

--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@ origin/master
             <div id="Button6"></div>
             <div id="Button7"></div>
         </div>
+    <div id="contentwrapper">
         <!-- Button for changing language of site -->
         <div id="Language"></div>
         <!-- Content of website in center of screen-->
         <div id="Content"></div>
         <!-- Footerbar in bottom of screen -->
         <div id="Footer"></div>
-
+    </div>
 <!-- Idè: Hva om #Language, #Content og #Footer flyttes inn i en Div ID som bare inneholder dem?-->
 
     </body>
