bytta charset fra css filen til html filen

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ origin/master
 <html>
 
     <head>
+        <meta charset="utf-8">
         <meta name="description" content="Website created to accompany Syrian literacy app">
         <meta name="keywords" content="Syria, accessibility, literacy">
         <meta name="viewport" content="width=device-width">
@@ -17,7 +18,7 @@ origin/master
     <body>
         <div id="Nav1">
             <!-- Colorized Menu buttons left side -->
-            <div id="Button1"></div>            
+            <div id="Button1"></div>
             <div id="Button2"></div>
             <div id="Button3"></div>
             <div id="Button4"></div>
