I have edited the layout of the page.
Some of the classes are deleted and some of the div's are changed from
div to either header, nav or footer.  Added divs with classes called
verticalImg and verticalText.

--- a/index.html
+++ b/index.html
@@ -16,23 +16,40 @@ origin/master
     </head>
 
     <body>
-        <div id="Nav1">
+      <header>
+        <nav>
             <!-- Colorized Menu buttons left side -->
             <div id="Button1"></div>
             <div id="Button2"></div>
             <div id="Button3"></div>
-            <div id="Button4"></div>
-            <div id="Button5"></div>
-            <div id="Button6"></div>
-            <div id="Button7"></div>
-        </div>
+        </nav>
+      </header>
     <div id="contentwrapper">
         <!-- Button for changing language of site -->
         <div id="Language"></div>
         <!-- Content of website in center of screen-->
-        <div id="Content"></div>
+        <div id="Content">
+
+          <h1>ABC</h1>
+          <p>Tekstfelt</p>
+
+          <div class="Vertical">
+            <div class="VerticalImg">iOS</div>
+            <div class="VerticalText"></div>
+          </div>
+          <div class="Vertical">
+            <div class="VerticalImg">iOS</div>
+            <div class="VerticalText"></div>
+          </div>
+          <div class="Vertical">
+            <div class="VerticalImg">iOS</div>
+            <div class="VerticalText"></div>
+          </div>
+
+
+        </div>
         <!-- Footerbar in bottom of screen -->
-        <div id="Footer"></div>
+        <footer id="Footer"></footer>
     </div>
 <!-- Idè: Hva om #Language, #Content og #Footer flyttes inn i en Div ID som bare inneholder dem?-->
 
