deleted footer id

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ origin/master
             <div id="Button3"></div>
         </nav>
       </header>
+
     <div id="contentwrapper">
         <!-- Button for changing language of site -->
         <div id="Language"></div>
@@ -37,19 +38,20 @@ origin/master
             <div class="VerticalImg">iOS</div>
             <div class="VerticalText"></div>
           </div>
-          <div class="Vertical">
-            <div class="VerticalImg">iOS</div>
-            <div class="VerticalText"></div>
-          </div>
+
           <div class="Vertical">
             <div class="VerticalImg">iOS</div>
             <div class="VerticalText"></div>
           </div>
 
+          <div class="Vertical">
+            <div class="VerticalImg">iOS</div>
+            <div class="VerticalText"></div>
+          </div>
 
         </div>
         <!-- Footerbar in bottom of screen -->
-        <footer id="Footer"></footer>
+        <footer></footer>
     </div>
 <!-- Idè: Hva om #Language, #Content og #Footer flyttes inn i en Div ID som bare inneholder dem?-->
 
