edited to capital C

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ origin/master
         </nav>
       </header>
 
-    <div id="contentwrapper">
+    <div id="Contentwrapper">
         <!-- Button for changing language of site -->
         <div id="Language"></div>
         <!-- Content of website in center of screen-->
