Added a tag to footer i div contentwrapper

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ origin/master
 
         </div>
         <!-- Footerbar in bottom of screen -->
-        <footer></footer>
+        <footer><a href="http://www.google.com">Contact</a></footer>
     </div>
 <!-- Idè: Hva om #Language, #Content og #Footer flyttes inn i en Div ID som bare inneholder dem?-->
 
