created example content in footer
a tags
img tags
p tag
names of developers contributers

--- a/index.html
+++ b/index.html
@@ -51,7 +51,18 @@ origin/master
 
         </div>
         <!-- Footerbar in bottom of screen -->
-        <footer><a href="http://www.google.com">Contact</a></footer>
+        <footer>
+          <div>
+            <a href="url"><img src="iconurl"/></a>
+            <a href="url"><img src="iconurl"/></a>
+            <a href="url"><img src="iconurl"/></a>
+            <a href="url"><img src="iconurl"/></a>
+          </div>
+          <div>
+            <a href="http://www.google.com">Contact</a>
+            <p>Created by Yanislav, Julian, Ismail, Bas, Maria, Ida, Fawad, Jonas, Sahand og Irfan</p>
+          </div>
+        </footer>
     </div>
 <!-- Idè: Hva om #Language, #Content og #Footer flyttes inn i en Div ID som bare inneholder dem?-->
 
