--- a/index.html
+++ b/index.html
@@ -16,14 +16,12 @@ origin/master
     </head>
 
     <body>
-      <header>
         <nav>
             <!-- Colorized Menu buttons left side -->
-            <div id="Button1"></div>
-            <div id="Button2"></div>
-            <div id="Button3"></div>
+            <div id="Button1"><h1>Button1</h1></div>
+            <div id="Button2"><h1>Button2</h1></div>
+            <div id="Button3"><h1>Button3</h1></div>
         </nav>
-      </header>
 
     <div id="Contentwrapper">
         <!-- Button for changing language of site -->
