--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@ origin/master
         <div id="Content">
 
           <h1>ABC</h1>
-          <p>Tekstfelt</p>
+          <p>Since the outbreak of the civil war in Syria on March 2011. Millions of refugees has moved across the country to escape the conflict and the terror it brings. And most of them are uneducated, analfabetic and mentaly damaged. 
+In this website we are happy to announce an app that can make a change  to the problem and educate millions of immigrant. The app is easy made and makes use of technoligy to make learning more creative and fun by providing 
+</p>
 
           <div class="Vertical">
             <div class="VerticalImg">iOS</div>
