Logo, content, navn og maaaassseeeee annet

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ origin/master
             <div id="Button1"><h1>Button1</h1></div>
             <div id="Button2"><h1>Button2</h1></div>
             <div id="Button3"><h1>Button3</h1></div>
+            <img src="http://www.vectortemplates.com/raster/batman/batman-logo-big.gif" id="Logo">
         </nav>
 
     <div id="Contentwrapper">
