--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ origin/master
 
 <!DOCTYPE html>
 <html>
+<!--<html lang="ar">-->
 
     <head>
         <meta charset="utf-8">
@@ -16,6 +17,7 @@ origin/master
     </head>
 
     <body>
+
         <nav>
             <!-- Colorized Menu buttons left side -->
             <div id="Button1"><h1>Button1</h1></div>
@@ -24,47 +26,53 @@ origin/master
             <img src="http://www.vectortemplates.com/raster/batman/batman-logo-big.gif" id="Logo">
         </nav>
 
-    <div id="Contentwrapper">
-        <!-- Button for changing language of site -->
-        <div id="Language"></div>
-        <!-- Content of website in center of screen-->
-        <div id="Content">
+        <div id="Contentwrapper">
+          <!-- Button for changing language of site -->
+          <img id="Language" src="flag.png"></img>
+          <!-- Content of website in center of screen-->
+          <div id="Content">
 
-          <h1>ABC</h1>
-          <p>Since the outbreak of the civil war in Syria on March 2011. Millions of refugees has moved across the country to escape the conflict and the terror it brings. And most of them are uneducated, analfabetic and mentaly damaged. 
-In this website we are happy to announce an app that can make a change  to the problem and educate millions of immigrant. The app is easy made and makes use of technoligy to make learning more creative and fun by providing 
-</p>
+            <h1>ABC</h1>
+            <p>
+              Since the outbreak of the civil war in Syria on March 2011.
+              Millions of refugees has moved across the country to escape the conflict and the terror it brings.
+              And most of them are uneducated, analfabetic and mentaly damaged.
+              In this website we are happy to announce an app that can make a change to the problem and educate millions of immigrant.
+              The app is easy made and makes use of technoligy to make learning more creative and fun by providing
+            </p>
 
-          <div class="Vertical">
-            <div class="VerticalImg">iOS</div>
-            <div class="VerticalText"></div>
+            <div class="Vertical">
+              <div class="VerticalImg">iOS</div>
+              <div class="VerticalText"></div>
+            </div>
+
+            <div class="Vertical">
+              <div class="VerticalImg">iOS</div>
+              <div class="VerticalText"></div>
+            </div>
+
+            <div class="Vertical">
+              <div class="VerticalImg">iOS</div>
+              <div class="VerticalText"></div>
+            </div>
+
           </div>
 
-          <div class="Vertical">
-            <div class="VerticalImg">iOS</div>
-            <div class="VerticalText"></div>
-          </div>
-
-          <div class="Vertical">
-            <div class="VerticalImg">iOS</div>
-            <div class="VerticalText"></div>
-          </div>
+          <!-- Footerbar in bottom of screen -->
+          <footer>
+            <div>
+              <a href="https://www.facebook.com/"><img src=".png"/></a>
+              <a href="https://twitter.com/"><img src=".png"/></a>
+              <a href="https://snapchat.com/"><img src=".png"/></a>
+              <a href="https://plus.google.com/"><img src=".png"/></a>
+            </div>
+            <div>
+              <a href="mailto:s309732@stud.hioa.no">Contact</a>
+              <p>Created by Yanislav, Julian, Ismail, Bas, Maria, Ida, Fawad, Jonas, Sahand og Irfan</p>
+            </div>
+          </footer>
 
         </div>
-        <!-- Footerbar in bottom of screen -->
-        <footer>
-          <div>
-            <a href="url"><img src="iconurl"/></a>
-            <a href="url"><img src="iconurl"/></a>
-            <a href="url"><img src="iconurl"/></a>
-            <a href="url"><img src="iconurl"/></a>
-          </div>
-          <div>
-            <a href="http://www.google.com">Contact</a>
-            <p>Created by Yanislav, Julian, Ismail, Bas, Maria, Ida, Fawad, Jonas, Sahand og Irfan</p>
-          </div>
-        </footer>
-    </div>
 
     </body>
 
