--- a/resources.html
+++ b/resources.html
@@ -20,9 +20,6 @@ origin/master
 
         <nav>
             <!-- Colorized Menu buttons left side -->
-            <div id="Button1"><a href="index.html"><h1>Button1</h1></a></div>
-            <div id="Button2"><a href="resources.html"><h1>Button2</h1></a></div>
-            <div id="Button3"><a href="about.html"><h1>Button3</h1></a></div>
             <img src="http://www.vectortemplates.com/raster/batman/batman-logo-big.gif" id="Logo">
         </nav>
 
@@ -32,29 +29,18 @@ origin/master
           <!-- Content of website in center of screen-->
           <div id="Content">
 
-            <h1>ABC</h1>
+            <h1>Resources</h1>
             <p>
-              Since the outbreak of the civil war in Syria on March 2011.
-              Millions of refugees has moved across the country to escape the conflict and the terror it brings.
-              And most of them are uneducated, analfabetic and mentaly damaged.
-              In this website we are happy to announce an app that can make a change to the problem and educate millions of immigrant.
-              The app is easy made and makes use of technoligy to make learning more creative and fun by providing
+              <!-- Insert content -->
             </p>
 
-            <div class="Vertical">
-              <div class="VerticalImg">iOS</div>
-              <div class="VerticalText"></div>
-            </div>
-
-            <div class="Vertical">
-              <div class="VerticalImg">iOS</div>
-              <div class="VerticalText"></div>
-            </div>
-
-            <div class="Vertical">
-              <div class="VerticalImg">iOS</div>
-              <div class="VerticalText"></div>
-            </div>
+            <h2><!-- Insert content --><h2>
+              <p>
+                <!-- Insert content -->
+              </p>
+              <p>
+                <!-- Insert content -->
+              </p>
 
           </div>
 
@@ -69,7 +55,6 @@ origin/master
             <div>
               <p>© 2016 Oslo and Akershus University College of Applied Sciences</p>
               <a href="mailto:s309732@stud.hioa.no">Contact</a>
-              <p>Created by Yanislav, Julian, Ismail, Bas, Maria, Ida, Fawad, Jonas, Sahand and Irfan</p>
             </div>
           </footer>
 
