Deleted top comment above the <!DOCTYPE> added pictures from the web
Edited the code and added example links to help with the designing.

--- a/about.html
+++ b/about.html
@@ -1,9 +1,3 @@
-<!--<<<<<< HEAD
-My version - Julian
-My edited - Yanis
-origin/master
->>>>>>>-->
-
 <!DOCTYPE html>
 <html lang="en">
 <!--<html lang="ar">-->
@@ -18,44 +12,51 @@ origin/master
 
     <body>
 
+      <nav>
+          <!-- Colorized Menu buttons left side -->
+          <div id="Button1"><a href="index.html"><h1>Button1</h1></a></div>
+          <div id="Button2"><a href="resources.html"><h1>Button2</h1></a></div>
+          <div id="Button3"><a href="about.html"><h1>Button3</h1></a></div>
+          <img src="http://www.vectortemplates.com/raster/batman/batman-logo-big.gif" id="Logo">
+      </nav>
 
-        <div id="Contentwrapper">
-          <!-- Button for changing language of site -->
-          <img id="Language" src="flag.png"></img>
-          <!-- Content of website in center of screen-->
-          <div id="Content">
+      <div id="Contentwrapper">
+        <!-- Button for changing language of site -->
+        <img id="Language" src="flag.png"></img>
+        <!-- Content of website in center of screen-->
+        <div id="Content">
 
-            <h1>About us</h1>
-            <p><!-- Insert content--></P>
+          <h1>About us</h1>
+          <p><!-- Insert content--></P>
 
-            <h2>Why?</h2><!--Can be changed -->
-            <p><!-- Insert content about the crisis (The case)--></p>
+          <h2>Why?</h2><!--Can be changed -->
+          <p><!-- Insert content about the crisis (The case)--></p>
 
-            <h2>Contact</h2>
-            <ul>
-              <li>Visit us on <a href="https://facebook.com">Facebook</a></li>
-              <li>Visit us on <a href="https://plus.google.com">Google+</a></li>
-              <li>Add us on <a href="https://snapchat.com">SnapChat</a></li>
-            </ul>
+          <h2>Contact</h2>
+          <ul>
+            <li>Visit us on <a href="https://facebook.com">Facebook</a></li>
+            <li>Visit us on <a href="https://plus.google.com">Google+</a></li>
+            <li>Add us on <a href="https://snapchat.com">SnapChat</a></li>
+          </ul>
 
-
-          </div>
-
-          <!-- Footerbar in bottom of screen -->
-          <footer>
-            <div>
-              <a href="https://www.facebook.com/"><img src=".png"/></a>
-              <a href="https://twitter.com/"><img src=".png"/></a>
-              <a href="https://snapchat.com/"><img src=".png"/></a>
-              <a href="https://plus.google.com/"><img src=".png"/></a>
-            </div>
-            <div>
-              <p>© 2016 Oslo and Akershus University College of Applied Sciences</p>
-              <a href="mailto:s309732@stud.hioa.no">Contact</a>
-            </div>
-          </footer>
 
         </div>
+
+        <!-- Footerbar in bottom of screen -->
+        <footer>
+          <div>
+            <a href="https://www.facebook.com/"><img src=".png"/></a>
+            <a href="https://twitter.com/"><img src=".png"/></a>
+            <a href="https://snapchat.com/"><img src=".png"/></a>
+            <a href="https://plus.google.com/"><img src=".png"/></a>
+          </div>
+          <div>
+            <p>© 2016 Oslo and Akershus University College of Applied Sciences</p>
+            <a href="mailto:s309732@stud.hioa.no">Contact</a>
+          </div>
+        </footer>
+
+      </div>
 
     </body>
 
