--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-<!--<<<<<< HEAD
-My version - Julian
-My edited - Yanis
-origin/master
->>>>>>>-->
-
 <!DOCTYPE html>
 <html lang="en">
 <!--<html lang="ar">-->
@@ -18,62 +12,94 @@ origin/master
 
     <body>
 
-        <nav>
-            <!-- Colorized Menu buttons left side -->
-            <div id="Button1"><a href="index.html"><h1>Button1</h1></a></div>
-            <div id="Button2"><a href="resources.html"><h1>Button2</h1></a></div>
-            <div id="Button3"><a href="about.html"><h1>Button3</h1></a></div>
-            <img src="http://www.vectortemplates.com/raster/batman/batman-logo-big.gif" id="Logo">
-        </nav>
+      <nav>
+          <!-- Colorized Menu buttons left side -->
+          <div id="Button1"><a href="index.html"><h1>Button1</h1></a></div>
+          <div id="Button2"><a href="resources.html"><h1>Button2</h1></a></div>
+          <div id="Button3"><a href="about.html"><h1>Button3</h1></a></div>
+          <img src="http://www.vectortemplates.com/raster/batman/batman-logo-big.gif" id="Logo">
+      </nav>
 
-        <div id="Contentwrapper">
-          <!-- Button for changing language of site -->
-          <img id="Language" src="flag.png"></img>
-          <!-- Content of website in center of screen-->
-          <div id="Content">
+      <div id="Contentwrapper">
+        <!-- Button for changing language of site -->
+        <img id="Language" src="flag.png"></img>
+        <!-- Content of website in center of screen-->
+        <div id="Content">
 
-            <h1>ABC</h1>
-            <p>
-              Since the outbreak of the civil war in Syria on March 2011.
-              Millions of refugees has moved across the country to escape the conflict and the terror it brings.
-              And most of them are uneducated, analfabetic and mentaly damaged.
-              In this website we are happy to announce an app that can make a change to the problem and educate millions of immigrant.
-              The app is easy made and makes use of technoligy to make learning more creative and fun by providing
-            </p>
+          <h1>ABC</h1>
+          <p>
+            Since the outbreak of the civil war in Syria on March 2011.
+            Millions of refugees has moved across the country to escape the conflict and the terror it brings.
+            And most of them are uneducated, analfabetic and mentaly damaged.
+            In this website we are happy to announce an app that can make a change to the problem and educate millions of immigrant.
+            The app is easy made and makes use of technoligy to make learning more creative and fun by providing
+          </p>
 
-            <div class="Vertical">
-              <div class="VerticalImg">iOS</div>
-              <div class="VerticalText"></div>
+          <div class="Vertical">
+            <div class="VerticalImg">
+              <a href="http://www.apple.com/itunes/download/">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/1/11/Available_on_the_App_Store_(gray).png"/>
+              </a>
+              <p>iPhone</p>
             </div>
-
-            <div class="Vertical">
-              <div class="VerticalImg">iOS</div>
-              <div class="VerticalText"></div>
+            <div class="VerticalApp">
+              <img src=".png"/>
             </div>
-
-            <div class="Vertical">
-              <div class="VerticalImg">iOS</div>
-              <div class="VerticalText"></div>
-            </div>
-
           </div>
 
-          <!-- Footerbar in bottom of screen -->
-          <footer>
-            <div>
-              <a href="https://www.facebook.com/"><img src=".png"/></a>
-              <a href="https://twitter.com/"><img src=".png"/></a>
-              <a href="https://snapchat.com/"><img src=".png"/></a>
-              <a href="https://plus.google.com/"><img src=".png"/></a>
+          <div class="Vertical">
+
+            <div class="VerticalImg">
+              <a href="https://play.google.com/store/apps">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Logo_Google_play.jpg"/>
+              </a>
+              <p>Android</p>
             </div>
-            <div>
-              <p>© 2016 Oslo and Akershus University College of Applied Sciences</p>
-              <a href="mailto:s309732@stud.hioa.no">Contact</a>
-              <p>Created by Yanislav, Julian, Ismail, Bas, Maria, Ida, Fawad, Jonas, Sahand and Irfan</p>
+            <div class="VerticalApp">
+              <img src=".png"/>
             </div>
-          </footer>
+          </div>
+
+          <div class="Vertical">
+            <div class="VerticalImg">
+              <a href="https://www.microsoft.com/nb-no/store/apps/windows-phone">
+                <img src="https://assets.onestore.ms/cdnfiles/external/uhf/long/9a49a7e9d8e881327e81b9eb43dabc01de70a9bb/images/microsoft-gray.png"/>
+              </a>
+              <p>Windows Phone</p>
+            </div>
+            <div class="VerticalApp">
+              <img src=".png"/>
+            </div>
+          </div>
 
         </div>
+
+        <!-- Footerbar in bottom of screen -->
+        <footer>
+
+          <div>
+            <a href="https://www.facebook.com/">
+              <img src=".png"/>
+            </a>
+            <a href="https://twitter.com/">
+              <img src=".png"/>
+            </a>
+            <a href="https://snapchat.com/">
+              <img src=".png"/>
+            </a>
+            <a href="https://plus.google.com/">
+              <img src=".png"/>
+            </a>
+          </div>
+
+          <div>
+            <p>© 2016 Oslo and Akershus University College of Applied Sciences</p>
+            <a href="mailto:s309732@stud.hioa.no">Contact</a>
+            <p>Created by Yanislav, Julian, Ismail, Bas, Maria, Ida, Fawad, Jonas, Sahand and Irfan</p>
+          </div>
+        </footer>
+
+      </div>
 
     </body>
 
