Added flag for English version

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
       <div id="Contentwrapper">
         <!-- Button for changing language of site -->
-        <img id="Language" src="flag.png"></img>
+        <img id="Language" src="https://upload.wikimedia.org/wikipedia/commons/1/17/Union_flag_1606_(Kings_Colors).svg"></img>
         <!-- Content of website in center of screen-->
         <div id="Content">
 
