Linked the language versions and made the language flags available
Deleted the arabic flder and made copies of all html. Changed the named
with name_ar.html.
Added picture files to Images folder.
Linked all versions, you can change the language from whichever page you
are currently on.

--- a/about.html
+++ b/about.html
@@ -22,7 +22,12 @@
 
       <div id="Contentwrapper">
         <!-- Button for changing language of site -->
-        <img id="Language" src="flag.png"></img>
+        <a href="about.html">
+          <img id="Language" src="Images\english_language.jpg" />
+        </a>
+        <a href="about_ar.html">
+          <img id="Language" src="Images\arabic_language.png" />
+        </a>
         <!-- Content of website in center of screen-->
         <div id="Content">
 
