--- a/index_ar.html
+++ b/index_ar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 <!--<html lang="ar">-->
 
     <head>
@@ -22,17 +22,18 @@
 
       <div id="Contentwrapper">
         <!-- Button for changing language of site -->
-        <img id="Language" src="flag.png"></img>
+        <a href="index.html">
+          <img id="Language" src="Images\english_language.jpg" />
+        </a>
+        <a href="index_ar.html">
+          <img id="Language" src="Images\arabic_language.png" />
+        </a>
         <!-- Content of website in center of screen-->
         <div id="Content">
 
           <h1>ABC</h1>
           <p>
-            Since the outbreak of the civil war in Syria on March 2011.
-            Millions of refugees has moved across the country to escape the conflict and the terror it brings.
-            And most of them are uneducated, analfabetic and mentaly damaged.
-            In this website we are happy to announce an app that can make a change to the problem and educate millions of immigrant.
-            The app is easy made and makes use of technoligy to make learning more creative and fun by providing
+            منذ اندلاع الحرب الأهلية في سوريا في مارس 2011. الملايين من اللاجئين انتقلت في جميع أنحاء البلاد هربا من الصراع والإرهاب في ان يجلب. ومعظمهم غير متعلمين، أميين وتلف عقليا. في هذا الموقع ونحن سعداء بالإعلان عن أحد التطبيقات التي يمكن إجراء تغيير على المشكلة وتوعية الملايين من المهاجرين. التطبيق من السهل جعل ويجعل من استخدام التكنولوجيا لجعل التعلم أكثر إبداعا ومتعة من خلال توفير
           </p>
 
           <div class="Vertical">
