--- a/resources_ar.html
+++ b/resources_ar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
 <!--<html lang="ar">-->
 
     <head>
@@ -22,23 +22,27 @@
 
       <div id="Contentwrapper">
         <!-- Button for changing language of site -->
-        <img id="Language" src="flag.png"></img>
+        <a href="resources.html">
+          <img id="Language" src="Images\english_language.jpg" />
+        </a>
+        <a href="resources_ar.html">
+          <img id="Language" src="Images\arabic_language.png" />
+        </a>
         <!-- Content of website in center of screen-->
         <div id="Content">
 
-          <h1>About us</h1>
-          <p><!-- Insert content--></P>
+          <h1>Resources</h1>
+          <p>
+            <!-- Insert content -->
+          </p>
 
-          <h2>Why?</h2><!--Can be changed -->
-          <p><!-- Insert content about the crisis (The case)--></p>
-
-          <h2>Contact</h2>
-          <ul>
-            <li>Visit us on <a href="https://facebook.com">Facebook</a></li>
-            <li>Visit us on <a href="https://plus.google.com">Google+</a></li>
-            <li>Add us on <a href="https://snapchat.com">SnapChat</a></li>
-          </ul>
-
+          <h2><!-- Insert content --><h2>
+            <p>
+              <!-- Insert content -->
+            </p>
+            <p>
+              <!-- Insert content -->
+            </p>
 
         </div>
 
