--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
 
       <div id="Contentwrapper">
         <!-- Button for changing language of site -->
-        <img id="Language" src="https://upload.wikimedia.org/wikipedia/commons/1/17/Union_flag_1606_(Kings_Colors).svg"></img>
+        <a href="index.html">
+          <img id="Language" src="Images\english_language.jpg" />
+        </a>
+        <a href="index_ar.html">
+          <img id="Language" src="Images\arabic_language.png" />
+        </a>
         <!-- Content of website in center of screen-->
         <div id="Content">
 
@@ -30,9 +35,9 @@
           <p>
             Since the outbreak of the civil war in Syria on March 2011.
             Millions of refugees has moved across the country to escape the conflict and the terror it brings.
-            And most of them are uneducated, analfabetic and mentaly damaged.
+            And most of them are uneducated, illiterate and mentally damaged.
             In this website we are happy to announce an app that can make a change to the problem and educate millions of immigrant.
-            The app is easy made and makes use of technoligy to make learning more creative and fun by providing
+            The app is easy made and makes use of technology to make learning more creative and fun by providing
           </p>
 
           <div class="Vertical">
