Style referanse fikset til style.css istedet for index.css
Fikset også at nav baren følger deg ned i siden og at content og nav
ikke overlapper -FAWAD

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Website created to accompany Syrian literacy app">
         <meta name="keywords" content="Syria, accessibility, literacy">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" type="text/css" href="index.css"/>
+        <link rel="stylesheet" type="text/css" href="style.css"/>
     </head>
 
     <body>
