--- a/resources_ar.html
+++ b/resources_ar.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Website created to accompany Syrian literacy app">
         <meta name="keywords" content="Syria, accessibility, literacy">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" type="text/css" href="index.css"/>
+        <link rel="stylesheet" type="text/css" href="style.css"/>
     </head>
 
     <body>
