--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <nav>
           <!-- Colorized Menu buttons left side -->
           <div id="Button1" style="background-color: #33ff33;"><a href="index.html"><h1>Button1</h1></a></div>
-          <div id="Button2" style="background-color: orange;><a href="resources.html"><h1>Button2</h1></a></div>
-          <div id="Button3" style="background-color: #6666ff;><a href="about.html"><h1>Button3</h1></a></div>
+          <div id="Button2" style="background-color: orange;"><a href="resources.html"><h1>Button2</h1></a></div>
+          <div id="Button3" style="background-color: #6666ff;"><a href="about.html"><h1>Button3</h1></a></div>
           <img src="http://www.vectortemplates.com/raster/batman/batman-logo-big.gif" id="Logo">
       </nav>
 
