--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     </head>
 
     <body style="background-color: #E9EBEE">
-
+        <a href="index_ar.html">
+          <img id="Language" src="Images\arabic_language.png" />
+        </a>
       <nav>
           <!-- Colorized Menu buttons left side -->
           <div id="Button1" style="background-color: #33ff33;"><a href="index.html"><h1>Button1</h1></a></div>
@@ -22,12 +24,7 @@
 
       <div id="Contentwrapper">
         <!-- Button for changing language of site -->
-        <a href="index.html">
-          <img id="Language" src="Images\english_language.jpg" />
-        </a>
-        <a href="index_ar.html">
-          <img id="Language" src="Images\arabic_language.png" />
-        </a>
+
         <!-- Content of website in center of screen-->
         <div id="Content">
 
@@ -48,7 +45,7 @@
               <p>iPhone</p>
             </div>
             <div class="VerticalApp">
-              <img src=".png"/>
+              <img src="/Images/english_language.jpg"/>
             </div>
           </div>
 
@@ -61,7 +58,7 @@
               <p>Android</p>
             </div>
             <div class="VerticalApp">
-              <img src=".png"/>
+              <img src="/Images/english_language.jpg"/>
             </div>
           </div>
 
@@ -73,7 +70,7 @@
               <p>Windows Phone</p>
             </div>
             <div class="VerticalApp">
-              <img src=".png"/>
+              <img src="/Images/english_language.jpg"/>
             </div>
           </div>
 
