Fixed follow icons

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             In this website we are happy to announce an app that can make a change to the problem and educate millions of immigrant.
             The app is easy made and makes use of technology to make learning more creative and fun by providing
           </p>
-
+        <div id="Verticals">    
           <div class="Vertical">
             <div class="VerticalImg">
               <a href="http://www.apple.com/itunes/download/">
@@ -75,22 +75,22 @@
           </div>
 
         </div>
-
+    </div>    
         <!-- Footerbar in bottom of screen -->
         <footer>
 
-          <div>
+          <div id="Follow">
             <a href="https://www.facebook.com/">
-              <img src=".png"/>
+              <img src="/Images/social/facebookicon.svg"/>
             </a>
-            <a href="https://twitter.com/">
-              <img src=".png"/>
+            <a  href="https://twitter.com/">
+              <img style="width: 4em" src="/Images/social/twittericon.svg"/>
             </a>
-            <a href="https://snapchat.com/">
-              <img src=".png"/>
+            <a  href="https://snapchat.com/">
+              <img src="/Images/social/snapchaticon.svg"/>
             </a>
             <a href="https://plus.google.com/">
-              <img src=".png"/>
+              <img src="/Images/social/rssicon.svg"/>
             </a>
           </div>
 
