--- a/index.html
+++ b/index.html
@@ -28,15 +28,16 @@
         <!-- Content of website in center of screen-->
         <div id="Content">
 
-          <h1>ABC</h1>
+          <h1>Lil' B</h1>
           <p>
-            Since the outbreak of the civil war in Syria on March 2011.
-            Millions of refugees has moved across the country to escape the conflict and the terror it brings.
-            And most of them are uneducated, illiterate and mentally damaged.
-            In this website we are happy to announce an app that can make a change to the problem and educate millions of immigrant.
-            The app is easy made and makes use of technology to make learning more creative and fun by providing
+            Lil’ B is an app for your phone. With Lil’ B you can learn how to write and read based on your own level.
+            Begin with choosing your language based on the flag and move on to choose the levels beginner, intermediate or advanced.
           </p>
-        <div id="Verticals">    
+          <p>
+            With Lil’ B you can practice on writing individual letters within the lines and type longer words to the pictures shown on the screen.
+            If you want to listen to the sounds of each letter, word or sentence, tap the speaker icon on the right hand corner on the top of the screen.
+          </p>
+        <div id="Verticals">
           <div class="Vertical">
             <div class="VerticalImg">
               <a href="http://www.apple.com/itunes/download/">
@@ -75,7 +76,7 @@
           </div>
 
         </div>
-    </div>    
+    </div>
         <!-- Footerbar in bottom of screen -->
         <footer>
 
