Fixed twitter placeholder

--- a/index.html
+++ b/index.html
@@ -85,12 +85,13 @@
               <img src="Images/social/facebookicon.svg"/>
             </a>
             <a  href="https://twitter.com/">
-              <img style="width: 4em" src="Images/social/twittericon.svg"/>
+              <img style="width: 4em" src="Images/social/twitterplaceholder.webp"/>
             </a>
             <a  href="https://snapchat.com/">
               <img src="Images/social/snapchaticon.svg"/>
             </a>
             <a href="https://plus.google.com/">
+              <img src="Images/social/rssicon.svg"/>
             </a>
           </div>
 
