Made social icons stay beside of each otehr

--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
         <footer>
 
           <div id="Follow">
-            <a href="https://www.facebook.com/">
+            <a class="SocialIcon" href="https://www.facebook.com/">
               <img src="Images/social/facebookicon.svg"/>
             </a>
-            <a  href="https://twitter.com/">
+            <a class="SocialIcon" href="https://twitter.com/">
               <img style="width: 4em" src="Images/social/twitterplaceholder.webp"/>
             </a>
             <a  href="https://snapchat.com/">
-              <img src="Images/social/snapchaticon.svg"/>
+              <img class="SocialIcon" src="Images/social/snapchaticon.svg"/>
             </a>
             <a href="https://plus.google.com/">
             </a>
