--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
         <link rel="stylesheet" type="text/css" href="style.css"/>
     </head>
 
-    <body style="background-color: #E9EBEE">
+    <body style="background-color: #518542">
         <a href="index_ar.html">
           <img id="Language" src="Images\arabic_language.png" />
         </a>
       <nav>
           <!-- Colorized Menu buttons left side -->
-          <div id="Button1" style="background-color: #33ff33;"><a href="index.html"><h1>Button1</h1></a></div>
-          <div id="Button2" style="background-color: orange;"><a href="resources.html"><h1>Button2</h1></a></div>
-          <div id="Button3" style="background-color: #6666ff;"><a href="about.html"><h1>Button3</h1></a></div>
+          <div id="Button1" style="background-color: #FFC0CB;"><a href="index.html"><h1>Home</h1></a></div>
+          <div id="Button2" style="background-color: #FFDAB9;"><a href="resources.html"><h1>Resources</h1></a></div>
+          <div id="Button3" style="background-color: #FFEFD5;"><a href="about.html"><h1>About us</h1></a></div>
           <img src="http://www.vectortemplates.com/raster/batman/batman-logo-big.gif" id="Logo">
       </nav>
 
