Endring app divs (bedre)
også noen placeholders, ikke no css gjort enda.

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         </a>
       <nav>
           <!-- Colorized Menu buttons left side -->
-          <div id="Button1" style="background-color: #33ff33;"><a href="index.html"><h1>Button1</h1></a></div>
-          <div id="Button2" style="background-color: orange;"><a href="resources.html"><h1>Button2</h1></a></div>
-          <div id="Button3" style="background-color: #6666ff;"><a href="about.html"><h1>Button3</h1></a></div>
+          <a href="index.html"><div id="Button1" style="background-color: #33ff33;"><h1>Button1</h1></div></a>
+          <a href="resources.html"><div id="Button2" style="background-color: orange;"><h1>Button2</h1></div></a>
+          <a href="about.html"><div id="Button3" style="background-color: #6666ff;"><h1>Button3</h1>  </div></a>
           <img src="http://www.vectortemplates.com/raster/batman/batman-logo-big.gif" id="Logo">
       </nav>
 
@@ -28,7 +28,7 @@
         <!-- Content of website in center of screen-->
         <div id="Content">
 
-          <h1>ABC</h1>
+          <a href="index.html"><img src="Images/logoph.png"></a>
           <p>
             Since the outbreak of the civil war in Syria on March 2011.
             Millions of refugees has moved across the country to escape the conflict and the terror it brings.
@@ -36,16 +36,46 @@
             In this website we are happy to announce an app that can make a change to the problem and educate millions of immigrant.
             The app is easy made and makes use of technology to make learning more creative and fun by providing
           </p>
+        <div id="app">
+          <div id="downloads">
+            <div class="store">
+              <a href="http://www.apple.com/itunes/download/">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/1/11/Available_on_the_App_Store_(gray).png"/>
+              </a>
+            </div>
+            <div class="store">
+              <a href="https://play.google.com/store/apps">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Logo_Google_play.jpg"/>
+              </a>
+            </div>
+            <div class="store">
+              <a href="https://www.microsoft.com/nb-no/store/apps/windows-phone">
+                <img src="https://assets.onestore.ms/cdnfiles/external/uhf/long/9a49a7e9d8e881327e81b9eb43dabc01de70a9bb/images/microsoft-gray.png"/>
+              </a>
+            </div>
+          </div>
+          <div id="screen">
+            <div class="shot">
+              <img src="Images/placeholderss.png"/ style="max-width:200px;min-width:150px;width:auto;height:auto;"/>
+            </div>
+            <div class="shot">
+              <img src="Images/placeholderss.png"/ style="max-width:200px;min-width:150px;width:auto;height:auto;"/>
+            </div>
+            <div class="shot">
+              <img src="Images/placeholderss.png"/ style="max-width:200px;min-width:150px;width:auto;height:auto;"/>
+            </div>
+          </div>
+        </div>
+
         <div id="Verticals">    
           <div class="Vertical">
             <div class="VerticalImg">
               <a href="http://www.apple.com/itunes/download/">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/1/11/Available_on_the_App_Store_(gray).png"/>
               </a>
-              <p>iPhone</p>
             </div>
             <div class="VerticalApp">
-              <img src="/Images/english_language.jpg"/>
+              <img src="Images/placeholderss.png"/ style="max-width:200px;min-width:150px;width:auto;height:auto;"/>
             </div>
           </div>
 
@@ -55,10 +85,9 @@
               <a href="https://play.google.com/store/apps">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Logo_Google_play.jpg"/>
               </a>
-              <p>Android</p>
             </div>
             <div class="VerticalApp">
-              <img src="/Images/english_language.jpg"/>
+              <img src="Images/placeholderss.png"/ style="max-width:200px;min-width:150px;width:auto;height:auto;"/>
             </div>
           </div>
 
@@ -67,10 +96,9 @@
               <a href="https://www.microsoft.com/nb-no/store/apps/windows-phone">
                 <img src="https://assets.onestore.ms/cdnfiles/external/uhf/long/9a49a7e9d8e881327e81b9eb43dabc01de70a9bb/images/microsoft-gray.png"/>
               </a>
-              <p>Windows Phone</p>
             </div>
             <div class="VerticalApp">
-              <img src="/Images/english_language.jpg"/>
+              <img src="Images/placeholderss.png"/ style="max-width:200px;min-width:150px;width:auto;height:auto;"/>
             </div>
           </div>
 
