--- a/index.html
+++ b/index.html
@@ -100,17 +100,42 @@
         <footer>
 
           <div id="Follow">
-            <a class="SocialIcon" href="https://www.facebook.com/">
-              <img src="Images/social/facebookicon.svg"/>
-            </a>
-            <a class="SocialIcon" href="https://twitter.com/">
-              <img style="width: 4em" src="Images/social/twitterplaceholder.webp"/>
-            </a>
-            <a  href="https://snapchat.com/">
-              <img class="SocialIcon" src="Images/social/snapchaticon.svg"/>
-            </a>
-            <a href="https://plus.google.com/">
-            </a>
+
+            <table>
+              <tr>
+                <th colspan="2">Social media</th>
+              </tr>
+              <tr class="imgs">
+
+                <td>
+                  <a class="SocialIcon" href="https://www.facebook.com/">
+                  <img src="Images/social/facebookicon.svg"/>
+                </a>
+                </td>
+
+                <td>
+                  <a class="SocialIcon" href="https://twitter.com/">
+                    <img style="width: 4em" src="Images/social/twitterplaceholder.webp"/>
+                  </a>
+                </td>
+
+              </tr>
+              <tr>
+
+                <td>
+                  <a  href="https://snapchat.com/">
+                    <img class="SocialIcon" src="Images/social/snapchaticon.svg"/>
+                  </a>
+                </td>
+
+                <td>
+                  <a  href="https://rss.com/">
+                    <img class="SocialIcon" src="Images/social/rssicon.svg"/>
+                  </a>
+                </td>
+
+              </tr>
+            </table>
           </div>
 
           <div>
