changed icons and edited names

--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@
           <div id="downloads">
             <div class="store">
               <a href="http://www.apple.com/itunes/download/">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/1/11/Available_on_the_App_Store_(gray).png"/>
+                <img src="Images/store/apple.svg"/>
               </a>
             </div>
             <div class="store">
               <a href="https://play.google.com/store/apps">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Logo_Google_play.jpg"/>
+                <img src"Images/store/android.svg"/>
               </a>
             </div>
             <div class="store">
               <a href="https://www.microsoft.com/nb-no/store/apps/windows-phone">
-                <img src="https://assets.onestore.ms/cdnfiles/external/uhf/long/9a49a7e9d8e881327e81b9eb43dabc01de70a9bb/images/microsoft-gray.png"/>
+                <img src="Images/store/windows.svg"/>
               </a>
             </div>
           </div>
@@ -100,40 +100,33 @@
         <footer>
 
           <div id="Follow">
-
             <table>
               <tr>
-                <th colspan="2">Social media</th>
+                <th colspan="2">Media</th>
               </tr>
               <tr class="imgs">
-
                 <td>
                   <a class="SocialIcon" href="https://www.facebook.com/">
                   <img src="Images/social/facebookicon.svg"/>
                 </a>
                 </td>
-
                 <td>
                   <a class="SocialIcon" href="https://twitter.com/">
                     <img style="width: 4em" src="Images/social/twitterplaceholder.webp"/>
                   </a>
                 </td>
-
               </tr>
               <tr>
-
                 <td>
                   <a  href="https://snapchat.com/">
                     <img class="SocialIcon" src="Images/social/snapchaticon.svg"/>
                   </a>
                 </td>
-
                 <td>
                   <a  href="https://rss.com/">
                     <img class="SocialIcon" src="Images/social/rssicon.svg"/>
                   </a>
                 </td>
-
               </tr>
             </table>
           </div>
