Changed image source on images in footer

--- a/index.html
+++ b/index.html
@@ -110,24 +110,24 @@
               <tr class="imgs">
                 <td>
                   <a class="SocialIcon" href="https://www.facebook.com/">
-                  <img src="Images/social/facebookicon.svg"/>
+                  <img src="Images/social/Facebook.svg"/>
                 </a>
                 </td>
                 <td>
                   <a class="SocialIcon" href="https://twitter.com/">
-                    <img style="width: 4em" src="Images/social/twitterplaceholder.webp"/>
+                    <img style="width: 4em" src="Images/social/Twitter.svg"/>
                   </a>
                 </td>
               </tr>
               <tr>
                 <td>
                   <a  href="https://snapchat.com/">
-                    <img class="SocialIcon" src="Images/social/snapchaticon.svg"/>
+                    <img class="SocialIcon" src="Images/social/Snapchat.svg"/>
                   </a>
                 </td>
                 <td>
                   <a  href="https://rss.com/">
-                    <img class="SocialIcon" src="Images/social/rssicon.svg"/>
+                    <img class="SocialIcon" src="Images/social/RSS%20feed.svg"/>
                   </a>
                 </td>
               </tr>
