--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
 
     <body style="background-color: #E9EBEE">
-        
+
       <nav>
           <!-- Colorized Menu buttons left side -->
           <div id="Dropdown">
@@ -19,11 +19,12 @@
             <div id="Button2" style="background-color: orange;"><a href="resources.html"><h1>Button2</h1></a></div>
             <div id="Button3" style="background-color: #6666ff;"><a href="about.html"><h1>Button3</h1></a></div>
             <img src="http://www.vectortemplates.com/raster/batman/batman-logo-big.gif" id="Logo">
-        </div>  
+          </div>
+          <!-- Languages -->
             <a href="index_ar.html">
-          <img id="Language" src="Images\arabic_language.png" />
-        </a>  
-              
+              <img id="Language" src="Images\arabic_language.png" />
+            </a>
+
       </nav>
 
       <div id="Contentwrapper">
