Made footer more pretty to look at

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             </table>
           </div>
 
-          <div>
+          <div id="About">
             <p>© 2016 Oslo and Akershus University College of Applied Sciences</p>
             <a href="mailto:s309732@stud.hioa.no">Contact</a>
             <p>Created by Yanislav, Julian, Ismail, Bas, Maria, Ida, Fawad, Jonas, Sahand and Irfan</p>
